syntax = "proto2";

message option_Setting{
    required bool isYellow = 1; 
    required bool isRight = 2;
    required bool isReal = 3;
    optional string refereeIP = 4;
    optional uint32 refPort = 5;
    optional string serialPort = 6;
}